Added the examples configuration files

--- a/ExampleOfConfigurationFile/Example2.conf
+++ b/ExampleOfConfigurationFile/Example2.conf
@@ -1,32 +1,51 @@
-experiment|name="OneQuarantinedA1TuesdayScreening25"|repetitions="1"|runMetricsEveryStep="false"
+experiment|name="VaccinatedStudents70WithoutScreeningOmicron"|repetitions="1"|runMetricsEveryStep="false"
 setup|setup
 go|go
 final|print-day-results
 exitCondition|stop-condition
-steppedValueSet|variable="run#"|first="1"|step="1"|last="1000"
+steppedValueSet|variable="run#"|first="1"|step="1"|last="500"
 enumeratedValueSet|variable="students-per-classroom"|value="20"
 enumeratedValueSet|variable="num-floors"|value="3"
 enumeratedValueSet|variable="num-classrooms-per-floor"|value="4"
+enumeratedValueSet|variable="init-infected"|value="0"
+enumeratedValueSet|variable="init-infected-type"|value="&quot;students&quot;"
+enumeratedValueSet|variable="mean-incubation-duration-in-days"|value="3"
+enumeratedValueSet|variable="mean-infection-duration-in-days"|value="7"
+enumeratedValueSet|variable="num-of-quarantine-days"|value="14"
+enumeratedValueSet|variable="dad-%"|value="0"
+enumeratedValueSet|variable="virus-variant"|value="&quot;Omicron&quot;"
+enumeratedValueSet|variable="prob-go-bathroom"|value="0.0008"
+enumeratedValueSet|variable="prob-go-blackboard"|value="0.0006"
+enumeratedValueSet|variable="prob-go-principal"|value="0.00014"
+enumeratedValueSet|variable="prob-outside-contagion"|value="0.046"
+enumeratedValueSet|variable="prob-symptomatic"|value="0"
 enumeratedValueSet|variable="prob-external-screening-1"|value="0.003"
 enumeratedValueSet|variable="prob-external-screening-2"|value="0.0075"
-enumeratedValueSet|variable="days-of-simulation"|value="100"
-enumeratedValueSet|variable="external-screening?"|value="true"
-enumeratedValueSet|variable="screening-policy"|value="&quot;all every week&quot;"
-enumeratedValueSet|variable="first-day-of-week"|value="&quot;tuesday&quot;"
-enumeratedValueSet|variable="second-day-of-week"|value="&quot;tuesday&quot;"
-enumeratedValueSet|variable="screening-adhesion-%"|value="25"
-enumeratedValueSet|variable="init-infected"|value="0"
+enumeratedValueSet|variable="lesson-duration-in-minutes"|value="50"
+enumeratedValueSet|variable="days-of-simulation"|value="60"
+enumeratedValueSet|variable="tick-duration-in-seconds"|value="60"
+enumeratedValueSet|variable="results-dir-name"|value="&quot;ResultsVaccinatedStudents70WithoutScreeningOmicron&quot;"
+enumeratedValueSet|variable="temperature-measurement"|value="&quot;no measurement&quot;"
 enumeratedValueSet|variable="ventilation-type-h-1"|value="3"
 enumeratedValueSet|variable="mask-type"|value="&quot;surgical&quot;"
 enumeratedValueSet|variable="fraction-of-population-wearing-mask"|value="1"
-enumeratedValueSet|variable="outside-contagion?"|value="true"
-enumeratedValueSet|variable="init-infected-type"|value="&quot;students&quot;"
-enumeratedValueSet|variable="prob-outside-contagion-young"|value="0.001"
 enumeratedValueSet|variable="vaccinated-teachers?"|value="true"
-enumeratedValueSet|variable="vaccinated-students?"|value="false"
+enumeratedValueSet|variable="fraction-of-vaccinated-teachers"|value="1"
+enumeratedValueSet|variable="vaccinated-students?"|value="true"
+enumeratedValueSet|variable="fraction-of-vaccinated-students"|value="0.70"
+enumeratedValueSet|variable="vaccinated-janitors?"|value="true"
+enumeratedValueSet|variable="fraction-of-vaccinated-janitors"|value="1"
 enumeratedValueSet|variable="vaccinated-principals?"|value="true"
-enumeratedValueSet|variable="whole-classroom-quarantined?"|value="false"
+enumeratedValueSet|variable="vaccine-efficacy"|value="1"
 enumeratedValueSet|variable="num-infected-needed-to-quarantine-whole-classroom"|value="2"
 enumeratedValueSet|variable="number-of-after-days-special-swab"|value="5"
-enumeratedValueSet|variable="results-dir-name"|value="&quot;ResultsOneQuarantinedA1TuesdayScreening25&quot;"
-enumeratedValueSet|variable="vaccine-efficacy"|value="1"
+enumeratedValueSet|variable="quarantine-policy"|value="&quot;January/February 2022 (Piedmont)&quot;"
+enumeratedValueSet|variable="screening-policy"|value="&quot;no screening&quot;"
+enumeratedValueSet|variable="first-day-of-week"|value="&quot;monday&quot;"
+enumeratedValueSet|variable="second-day-of-week"|value="&quot;monday&quot;"
+enumeratedValueSet|variable="screening-adhesion-%"|value="100"
+enumeratedValueSet|variable="staggered-admissions?"|value="false"
+enumeratedValueSet|variable="spaced-desks?"|value="true"
+enumeratedValueSet|variable="outside-contagion?"|value="true"
+enumeratedValueSet|variable="interval-in-front-of-classroom?"|value="true"
+enumeratedValueSet|variable="external-screening?"|value="true"
